--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-Hello World!
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Neal Blackburn</title>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+
+	<link rel="stylesheet" type="text/css" href="assets/css/app.css">
+</head>
+<body>
+
+ <nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+	<!-- 
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+	  -->
+      <a class="navbar-brand" href="/">Neal Blackburn</a>
+    </div>
+	<!-- 
+    <div id="navbar" class="collapse navbar-collapse">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Signup  <i class="fa fa-user-plus"></i></a></li>
+        <li><a href="#about">Login  <i class="fa fa-user"></i></a></li>
+      </ul>
+    </div>
+	-->
+  </div>
+ </nav>
+
+ <div class="container">
+ 	<div class="row">
+ 		<div class="col-lg-12">
+ 			<div class="content">
+ 				<h1>Neal Blackburn</h1>
+ 				<h3>An Aspiring Software Engineer</h3>
+ 				<hr>
+ 				<a class="btn btn-default btn-lg" href="mailto:hello@nealblackburn.com"><i class="fa fa-envelope"></i></a>
+ 				<a class="btn btn-default btn-lg" href="https://www.linkedin.com/in/mrn55/"><i class="fa fa-linkedin-square"></i></a>
+ 				<a class="btn btn-default btn-lg" href="https://github.com/mrn55"><i class="fa fa-github"></i></a>
+ 				<hr>
+ 			</div>
+ 		</div>
+ 	</div>
+ </div>
+
+ <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
+ <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+
+</body>
+</html>
