--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
  		<div class="col-lg-12">
  			<div class="content">
  				<h1>Neal Blackburn</h1>
- 				<h3>An Aspiring Software Engineer</h3>
+ 				<h3>husband, father, devops engineer</h3>
  				<hr>
  				<a class="btn btn-default btn-lg" href="mailto:hello@nealblackburn.com"><i class="fa fa-envelope"></i></a>
  				<a class="btn btn-default btn-lg" href="https://www.linkedin.com/in/mrn55/"><i class="fa fa-linkedin-square"></i></a>
