--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
  				<h1>Neal Blackburn</h1>
  				<h3>husband, father, devops engineer</h3>
  				<hr>
- 				<a class="btn btn-default btn-lg" href="mailto:nospam1@nealblackburn.com"><i class="fa fa-envelope"></i></a>
- 				<a class="btn btn-default btn-lg" href="https://www.linkedin.com/in/mrn55/"><i class="fa fa-linkedin-square"></i></a>
+ 				<a class="btn btn-default btn-lg" href="mailto:sitespam1@nealblackburn.com"><i class="fa fa-envelope"></i></a>
  				<a class="btn btn-default btn-lg" href="https://github.com/mrn55"><i class="fa fa-github"></i></a>
  				<hr>
  			</div>
