--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
  				<h1>Neal Blackburn</h1>
  				<h3>husband, father, devops engineer</h3>
  				<hr>
+ 				<a class="btn btn-default btn-lg" href="https://devopsbible.com/"><i class="fa fa-globe"></i></a>
  				<a class="btn btn-default btn-lg" href="mailto:sitespam1@nealblackburn.com"><i class="fa fa-envelope"></i></a>
  				<a class="btn btn-default btn-lg" href="https://github.com/mrn55"><i class="fa fa-github"></i></a>
  				<hr>
