--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
  				<hr>
  				<a class="btn btn-default btn-lg" href="https://devopsbible.com/"><i class="fa fa-globe"></i></a>
  				<a class="btn btn-default btn-lg" href="mailto:sitespam1@nealblackburn.com"><i class="fa fa-envelope"></i></a>
- 				<a class="btn btn-default btn-lg" href="https://github.com/mrn55"><i class="fa fa-github"></i></a>
+<!--  				<a class="btn btn-default btn-lg" href="https://github.com/mrn55"><i class="fa fa-github"></i></a> -->
  				<hr>
  			</div>
  		</div>
